[gd_scene load_steps=5 format=3 uid="uid://ditwoiqa1q12c"]

[ext_resource type="Script" uid="uid://dskp0ex4fb5vr" path="res://scenes/characters/character.gd" id="1_1bdar"]
[ext_resource type="Texture2D" uid="uid://dys5sw4bnegve" path="res://assets/art/characters/shadow.png" id="2_e22cc"]
[ext_resource type="PackedScene" uid="uid://btvgpij0bw172" path="res://scenes/colliders/damage_emitter.tscn" id="3_e22cc"]
[ext_resource type="PackedScene" uid="uid://uht4h6frteux" path="res://scenes/colliders/damage_reciever.tscn" id="4_2qjml"]

[node name="character" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_1bdar")
speed = 5.0

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_e22cc")
centered = false
offset = Vector2(-7, 0)

[node name="characterSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DamageEmitter" parent="." instance=ExtResource("3_e22cc")]

[node name="DamageReciever" parent="." instance=ExtResource("4_2qjml")]

[node name="CollateralDamageEmitter" parent="." instance=ExtResource("3_e22cc")]

[node name="KnifeSprite" type="Sprite2D" parent="."]

[node name="ProjectileAim" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 0

[node name="CollectibleSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectibleSensor"]

[editable path="DamageEmitter"]
[editable path="DamageReciever"]
[editable path="CollateralDamageEmitter"]
